<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Projet CPI 2013</string>
    <string name="accueil_bar">Espace de connexion</string><string name="menu_settings">Settings</string><string name="username">Nom d\'utilisateur :</string>
    <string name="password">Mot de passe :</string>
    <string name="clearButton">Vider</string>
    <string name="validButton">Valider</string>
    <string name="message_bar">Messages</string>
    <string name="buttonListMessage">Liste des messages</string>
    <string name="nouveauMessage">Nouveau message</string>
    <string name="no_empty_fields">Les champs ne peuvent être vides.</string>
    <string name="accueilConnect"/>
    <string name="buttonEnvoyer">Envoyer</string>
    <string name="yourMessage">Votre message ici :</string>
    <string name="buttonRafraichir">Rafraichir</string>
    <string name="expediteur">expediteur</string>
    <string name="message">messageEnvoye</string>
    <string name="listMessage">listMessage</string>
    

</resources>