<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/wrapper"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >
	    
    <RelativeLayout
    	 android:id="@+id/subHeader"
    	 android:layout_width="match_parent"
    	 android:layout_height="35dp"
    	 android:background="#01B0F0"
    	 android:layout_below="@+id/wrapper"
    	 android:gravity="center_horizontal" >
     	    
     	 <TextView
      	    android:id="@+id/textHeader"
      	    android:layout_width="match_parent"
      	    android:layout_height="match_parent"
      	    android:text="@string/accueil_bar"
      	    android:textColor="#FFFFFF"
      	    android:textSize="18sp"
      	    android:gravity="center" />
     	    
     	<ProgressBar 
      	    android:id="@+id/loading"
      	    android:layout_width="wrap_content"
      	    android:layout_height="wrap_content"
      	    android:layout_alignRight="@+id/textHeader"
      	    android:visibility="invisible"/>
     	    
     </RelativeLayout>
     	
    <ScrollView
   	    android:id="@+id/connexionForm"
   	    android:layout_below="@+id/subHeader"
   	    android:layout_above="@+id/footer"
   	    android:layout_width="match_parent"
   	    android:layout_height="wrap_content"
   	    android:background="#EDF7F2"
   	    android:layout_margin="5dp" >
    		
   	    <LinearLayout
   	        android:id="@+id/contentForm"
   	        android:layout_width="match_parent"
   	        android:layout_height="wrap_content"
   	        android:orientation="vertical" >
   	    	
   	        <TextView
                android:id="@+id/error_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/no_empty_fields"
                android:textColor="#FFFF0000"
                android:visibility="gone" />
   	        
   	    	<TextView
   	        	android:id="@+id/username"
   	        	android:layout_width="match_parent"
   	        	android:layout_height="40dp"
   	        	android:padding="10dp"
   	        	android:layout_marginTop="10dp"
   	        	android:text="@string/username" />

   	    	<EditText
   	    	    android:id="@+id/editUserName"
   	    	    android:layout_width="200dp"
   	    	    android:layout_height="40dp"
   	    	    android:layout_marginBottom="10dp"
   	    	    android:layout_marginLeft="10dp"
   	    	    android:background="@android:drawable/editbox_background"
   	    	    android:ems="10"
   	    	    android:gravity="center"
   	    	    android:inputType="text"
   	    	    android:padding="10dp" >
   	    	    
   	    	    <requestFocus
   	    	        android:layout_width="wrap_content"
   	    	        android:layout_height="wrap_content" />
   	    	    
   	    	</EditText>
   	    	
   	    	<TextView
   	        	android:id="@+id/password"
   	        	android:layout_width="match_parent"
   	        	android:layout_height="40dp"
   	        	android:padding="10dp"
   	        	android:layout_marginTop="10dp"
   	        	android:text="@string/password" />

   	    	<EditText
   	    	    android:id="@+id/editPassword"
   	    	    android:layout_width="200dp"
   	        	android:layout_height="40dp"
   	        	android:layout_marginLeft="10dp"
   	        	android:layout_marginBottom="10dp"
   	        	android:padding="10dp"
   	        	android:background="@android:drawable/editbox_background"
   	    	    android:ems="10"
   	    	    android:gravity="center"
   	    	    android:inputType="textPassword" />
   	    	
   	    	<RelativeLayout
   	    	    android:id="@+id/memory"
   	    	    android:layout_width="match_parent"
   	    	    android:layout_height="wrap_content"
   	    	    android:gravity="center" >
				
   	    	</RelativeLayout>
   	    	
		</LinearLayout>
    	         	         	    
    </ScrollView>
        
   	<RelativeLayout 
 	        android:id="@+id/footer"
 	        android:layout_width="match_parent"
 	        android:layout_height="45dp"
 	        android:gravity="center"
 	        android:background="#01B0F0"
 	        android:layout_alignParentBottom="true"
 	        android:layout_marginBottom="5dp">
   	    
   	    <Button
   	        android:id="@+id/clearButton"
   	        android:layout_width="100dp"
   	        android:layout_height="30dp"
   	        android:layout_alignParentLeft="true"
   	        android:layout_marginLeft="40dp"
   	        android:background="@drawable/list_selector"
   	        android:text="@string/clearButton"
   	        android:textColor="#FFFFFF" />
   	    
   	     <Button
   	         android:id="@+id/validButton"
   	         android:layout_width="100dp"
   	         android:layout_height="30dp"
   	         android:layout_alignParentRight="true"
   	         android:layout_marginRight="40dp"
   	         android:background="@drawable/list_selector"
   	         android:text="@string/validButton"
   	         android:textColor="#FFFFFF" />
   	    
   	</RelativeLayout>
    
</RelativeLayout>