<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/wrapper"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    
    <RelativeLayout
    	 android:id="@+id/subHeader"
    	 android:layout_width="match_parent"
    	 android:layout_height="80dp"
    	 android:background="#01B0F0"
    	 android:layout_below="@+id/wrapper"
    	 android:gravity="center_horizontal" >
     	    
     	 <TextView
      	    android:id="@+id/textHeader"
      	    android:layout_width="match_parent"
      	    android:layout_height="40dp"
      	    android:layout_below="@+id/subHeader"
      	    android:text="@string/message_bar"
      	    android:textColor="#FFFFFF"
      	    android:textSize="18sp"
      	    android:gravity="center" />
     	    
     	<ProgressBar 
      	    android:id="@+id/loading"
      	    android:layout_width="wrap_content"
      	    android:layout_height="40dp"
      	    android:layout_alignRight="@+id/textHeader"
    		android:visibility="invisible"/>
     	
     	<TextView
      	    android:id="@+id/pageAccueil2"
      	    android:layout_width="match_parent"
      	    android:layout_height="35dp"
      	    android:layout_below="@+id/textHeader"
      	    android:layout_alignParentBottom="true"
      	    android:text="@string/accueilConnect"
      	    android:textColor="#FFFFFF"
      	    android:textSize="15sp"
      	    android:gravity="center"
      	    android:background="#BD8D46" />
     	     	     	    
    </RelativeLayout>
	  
	<ScrollView
	    android:id="@+id/messageForm"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_above="@+id/footer"
	    android:layout_below="@+id/subHeader"
	    android:layout_margin="5dp" >
	    
	    <RelativeLayout 
	        android:id="@+id/content"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:gravity="center">
	        
	        <Button
	            android:id="@+id/listMessage"
	            android:layout_width="200dp"
	            android:layout_height="wrap_content"
	            android:layout_marginBottom="45dp"
	            android:layout_marginTop="60dp"
	            android:background="@drawable/list_selector"
	            android:text="@string/buttonListMessage"
	            android:textColor="#FFFFFF"
	            android:textSize="18sp" />
	        
	        <Button
	            android:id="@+id/envoieMessage"
	            android:layout_width="200dp"
	            android:layout_height="wrap_content"
	            android:layout_below="@+id/listMessage"
	            android:layout_marginBottom="40dp"
	            android:layout_marginTop="30dp"
	            android:background="@drawable/list_selector"
	            android:text="@string/nouveauMessage"
	            android:textColor="#FFFFFF"
	            android:textSize="18sp" />
	        
	    </RelativeLayout>
	    
	</ScrollView>
	
	<LinearLayout 
	    android:id="@+id/footer"
	    android:layout_width="match_parent"
	    android:layout_height="45dp"
	    android:layout_marginBottom="5dp"
	    android:background="#01B0F0"
	    android:gravity="center"
	    android:layout_alignParentBottom="true">
	    
    </LinearLayout>

</RelativeLayout>